--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@edx/edx-proctoring": "^1.5.0",
     "@edx/frontend-component-cookie-policy-banner": "1.0.0",
     "@edx/paragon": "2.6.4",
-    "@edx/studio-frontend": "^1.16.22",
+    "@edx/studio-frontend": "git+https://github.com/open-craft/studio-frontend.git#812f91dd90f323c458bf86b3bb491185876f683b",
     "axios": "^0.18.1",
     "babel-core": "6.26.0",
     "babel-loader": "6.4.1",
