CORRECT typo which made template invalid

--- a/common/lib/xmodule/xmodule/templates/html/case_information.yaml
+++ b/common/lib/xmodule/xmodule/templates/html/case_information.yaml
@@ -1,7 +1,7 @@
 ---
 metadata:
     display_name: Case Information
-Case Information
+data: |
       <div class="div-casestudy"><img class="icon-image" src="/static/info.png" altCase Information
       Case Information
       <h4>Case InformationCase Information
