--- a/requirements/edx/base.in
+++ b/requirements/edx/base.in
@@ -69,6 +69,7 @@ django-waffle
 django-webpack-loader               # Used to wire webpack bundles into the django asset pipeline
 djangorestframework
 done-xblock
+drf-nested-routers
 edx-ace
 edx-api-doc-tools
 edx-auth-backends                   # Allow Studio to use LMS SSO
@@ -124,6 +125,7 @@ ora2
 piexif                              # Exif image metadata manipulation, used in the profile_images app
 Pillow                              # Image manipulation library; used for course assets, profile images, invoice PDFs, etc.
 py2neo                              # Driver for converting Python modulestore structures to Neo4j's schema (for Coursegraph).
+pyblake2
 pycountry
 pycryptodomex
 pygments                            # Used to support colors in paver command output
