--- a/common/lib/xmodule/xmodule/templates/html/optional_reading.yaml
+++ b/common/lib/xmodule/xmodule/templates/html/optional_reading.yaml
@@ -1,11 +1,10 @@
 ---
 metadata:
-    display_name: Optional Reading
-data: |
-      <div class="div-optionalreading">
-      <img class="icon-image" src="/static/reading.png" alt="">
-      <div>
-      <h4>Optional Reading</h4>
-      <p>Add text and links to your optional readings here.</p>
-      </div>
-      </div>
+  display_name: Optional Reading
+  data: |
+    <div class="div-info"><img class="icon-image" src="/static/additional_material.png" alt="" />
+    <div>
+    <h4>Optional Reading or Optional Resources</h4>
+    <p>Add text and links to your optional readings or optional resources here.</p>
+    </div>
+    </div>
