[SE-5135] Fixed optional reading and downloads content

--- a/common/lib/xmodule/xmodule/templates/html/optional_reading_or_optional_resources.yaml
+++ b/common/lib/xmodule/xmodule/templates/html/optional_reading_or_optional_resources.yaml
@@ -1,6 +1,6 @@
 ---
 metadata:
-  display_name: Optional Reading
+  display_name: Optional Reading or Optional Resources
   data: |
     <div class="div-info"><img class="icon-image" src="/static/additional_material.png" alt="" />
     <div>
