--- a/common/lib/xmodule/xmodule/templates/html/downloads.yaml
+++ b/common/lib/xmodule/xmodule/templates/html/downloads.yaml
@@ -2,7 +2,7 @@
 metadata:
   display_name: Downloads
   data: |
-    <div class="div-info"><img class="icon-image" src="/static/!downloads.png" alt="" />
+    <div class="div-info"><img class="icon-image" src="/static/downloads.png" alt="" />
     <div>
     <h4>Downloads</h4>
     </div>
